# ng-audio-bridge-backend

./: .gitattributes  .gitmodules  CMakeLists.txt  Makefile  README.md  filter.py  ng-audio-api.md  ng-audio-bridge-backend.py  niceFormat.py
.github/files/: libpistache-dev.deb  libpistache0.deb
.github/workflows/: build.yml
conf/: ng-backend  nginx-server.conf
db/: create_index.sql  create_table.sql  dbManager.py  filter.py  ng-audio-bridge-backend.py
doc/: README.md
doc/api/: version.md
doc/api/filter/: get.md
doc/api/filter/composer/: get.md
doc/api/genres/: get.md
doc/api/info/: get.md
doc/api/track/: delete.md  get.md  post.md  put.md
doc/objects/: genre.md  song.md
doc/radio2/: filterbridge.md
src/: Audio-Bridge-Server.cpp  Audio-Bridge-Server.hpp  AudioDatabase.cpp  AudioDatabase.hpp  AudioServer.cpp  AudioServer.hpp  HTTPServer.cpp  HTTPServer.hpp  TCPEventLoop.cpp  TCPEventLoop.hpp  args.cpp  args.hpp  filter.cpp  filter.hpp  ng-backend.cpp  songItem.cpp  songItem.hpp
tools/crawler/: NGAudioParser.py  crawler.py
www/: crossdomain.xml  index.html  ng-api-connector.js
